--- a/examples/UserConfigExample/data/update.html
+++ b/examples/UserConfigExample/data/update.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script src="spark-md5.js" type="text/javascript"></script>
+<script src="spark-all.min.js" type="text/javascript"></script>
 <body>
     <a href="/system.html" class="btn btn--s">&lt;</a>&nbsp;&nbsp;<strong>Update Firmware</strong>
     <hr>
